<resources>
    <string name="app_name" translatable="false">Granada Contributions</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="file_preferences" translatable="false">com.josealex.granadacontributions.PREFERENCE</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="explore_btn_text">Explore</string>
    <string name="change_user_mode">Change User Mode</string>
    <string name="owners_text">Owners : </string>
    <string name="market_to_apply_text">Market to apply</string>
    <string name="market_password_text">Market password</string>
    <string name="password_hint">Password</string>
    <string name="apply_button_text">Apply</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="spinner_nothing_selected">Nothing selected</string>
    <string name="spinner_select_market">Select one market</string>
    <string name="incorrect_market_password">Incorrect Password</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="name_market_error_message">Incorrect Name</string>
    <string name="password_market_error_message">Incorrect Password</string>
    <string name="that_name_already_exist">That name already exists</string>
    <string name="name_text">Name</string>
    <string name="password_for_managers_text">Password for managers</string>
    <string name="category_text">Category</string>
    <string name="price_text">Price</string>
    <string name="amount_text">Amount</string>
    <string name="user_image">user image</string>
    <string name="products">Products</string>
    <string name="new_market">New Market</string>
    <string name="managers">Managers</string>
    <string name="general_information">General information</string>
    <string name="market_uid">Market UID</string>
    <string name="market_admin">Market Admin</string>
    <string name="market_name">Market Name</string>
    <string name="collapsed">collapsed</string>
    <string name="product_uid">Product UID</string>
    <string name="amount_in_stock">Amount in Stock</string>
    <string name="price">Price</string>
    <string name="remove_market">Remove Market</string>
    <string name="contentDescription" translatable="false">contentDescription</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="buy">Buy</string>
    <string name="are_you_sure">Are you sure you do this?</string>
    <string name="warning">Warning!!</string>
    <string name="delete_button_text">Delete</string>
    <string name="remove_products">Remove products</string>
    <string name="filter_button">Filter</string>
    <string name="total" translatable="false">Total</string>
    <string name="salary_error">Invalid Salary</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="order_button">Order</string>
    <string name="refuse_button">Refuse</string>
    <string name="accept_button">Accept</string>
    <string name="client">Client :</string>
    <string name="add_to_shopping_cart">Add this product to the shopping cart?</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add">Add</string>
    <string name="username">Username</string>
    <string name="mail">Mail</string>
    <string name="add_money">Add Money</string>
    <string name="make_a_new_market">Make a new market</string>
    <string name="gestiones">Manages</string>
    <string name="salary">Salary</string>
    <string name="pending_orders">Pending orders</string>
    <string name="orders_of">"Orders of "</string>
    <string name="duplicated_warning">you already have this product in your cart</string>
    <string name="not_equals_market">The product you have selected belongs to another market, remember that an order must only have products from a single market</string>
    <string name="ok_dialog_button">Ok</string>
    <string name="products_already_exist">This product already exists</string>
    <string name="total_pedido" translatable="false">Total :</string>
    <string name="are_you_sure_delete">Are you sure you want to cancel this order?</string>
    <string name="do_not_cancel">Do not Cancel</string>
    <string name="you_cant_delete_market_if">You cannot delete a market if it still has pending orders</string>
    <string name="out_of_stock">This product is out of stock</string>
    <string name="out_of_stock_title">Out of stock</string>
    <string name="cancel_order_button">Cancel order</string>
    <string name="cancel_order_warning">Are you sure to cancel this order?</string>
    <string name="cannot_undo_this_action">You cannot undo this action</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refuse_order_title">Are you sure to refuse this order?</string>
    <string name="accept_order_title">Accept order</string>
</resources>