<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"

                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSecondaryTransparent"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/salary"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/hr2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textViewSalary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorTertiary"
                    android:textStyle="bold|italic"
                    tools:text="1234€" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryTransparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/hr5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            tools:text="Pepe Sanchez" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryTransparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/mail"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/hr6"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/mail_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            tools:text="pepe@gmail.com" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorSecondaryTransparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTOTAL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/add_money"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold|italic" />

            <ImageButton
                android:id="@+id/market_addmoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/user_image"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <View
            android:id="@+id/hr3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryTransparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/make_a_new_market"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/market_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/user_image"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <View
            android:id="@+id/hr4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryTransparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/gestiones"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/preferences_apply_for_market_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/user_image"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <View
            android:id="@+id/hr7"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="25dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gestionpreference"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/list_item_market">

            </androidx.recyclerview.widget.RecyclerView>
        </FrameLayout>

    </LinearLayout>
</ScrollView>