<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:paddingLeft="25dp"
        android:paddingTop="5dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/market_to_apply_text"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:background="@color/toolbar_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_menu_linearlayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/market_selector_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:dropDownWidth="wrap_content"
            android:minHeight="50dp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="#8E8F8F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_menu_linearlayout" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:paddingLeft="25dp"
        android:paddingTop="5dp"
        android:paddingRight="25dp"
        android:paddingBottom="5dp"
        android:text="@string/market_password_text"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:background="@color/toolbar_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_menu_linearlayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/market_apply_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="#8E8F8F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_menu_linearlayout" />
    </LinearLayout>

</LinearLayout>